# resume

./: .gitignore  CNAME  LICENSE  README.md  index.html  pyproject.toml  tailwind.config.js
.github/workflows/: build.yaml
assets/css/: custom.css
css/: style.css
data/en/: main.yaml
data/zh/: main.yaml
public/: _redirects  index.html
renderer/: __init__.py  __main__.py  _core.py
templates/: main.html
