[project]
name = "resume"
version = "0.1.0"
description = "Resume of Frost Ming"
authors = [
    {name = "Frost Ming", email = "me@frostming.com"},
]
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1.2",
    "marko>=1.2.2",
    "requests>=2.28.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm.scripts]
build = "python -m renderer"
dev = "python -m renderer --dev"

[tool.pdm.dev-dependencies]
dev = [
    "pytailwindcss>=0.1.4",
    "livereload>=2.6.3",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
